--- a/style.css
+++ b/style.css
@@ -117,7 +117,7 @@ a:visited{
   z-index:-1;
   margin-top:46px;
   padding-top: 50%;
-  background:url(/asset.css/img/gfds.png) top center/ contain no-repeat ;
+  background:url(https://user-images.githubusercontent.com/102859609/197398025-37d5a999-8aac-431a-ae08-41e8ef2103b7.png) top center/ contain no-repeat ;
   position: relative;
 }
 #slider .text-heading{
